one more change to the multipage question
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2332 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/faq/pyxfaq.tex
+++ b/faq/pyxfaq.tex
@@ -275,9 +275,8 @@ d.writePSfile("multipage")
 \end{progcode}
 Here, \texttt{d} is the document into which pages are inserted by means
 of the \texttt{append} method. When converting from a canvas to a document
-page, the page properties like the paperformat are specified. Note, that 
-during the generation of pages, the canvas can be reused. In the last line,
-output is produced from the document.
+page, the page properties like the paperformat are specified. In the last 
+line, output is produced from document \texttt{d}.
 }
 
 \section{Plotting of graphs}
